(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``PHAB_ID=#`` and ``RB_ID=#`` correspond to associated messages in commits.

Next Version

API Changes:

  * util-app: c.t.app.Flag.let and letClear are now generic in their return type.
    ``PHAB_ID=D93951``

Runtime Behavior Changes:

  * util-jvm: The `jvm/mem/postGC/{poolName}/max` metric has been removed
    because it is the same as the `jvm/mem/current/{poolName}/max` metric.
    ``PHAB_ID=D95291``

  * util-security: Assert validity of X.509 certificates when read from a file.
    Attempting to read a `c.t.util.security.X509CeritificateFile` will now assert
    that the certificate is valid, i.e., if the current date and time are within
    the validity period given in the certificate. ``PHAB_ID=D88745``

7.1.0  2017-09-06

API Changes:

  * util-events: Module has been removed. ``PHAB_ID=D82346``

  * util-lint: Add GlobalRules#withRules for testing. Allow for the ability to 
    specify a global rules set for use in testing. ``PHAB_ID=D83506``

7.0.0  2017-08-15

New Features:

  * util-core: Added `c.t.util.SlowProbeProxyTimer` for monitoring the duration
    of execution for timer tasks. ``PHAB_ID=D70279``

  * util-core: Introduced RootMonitor#set to set custom Monitor to RootMonitor.
    ``PHAB_ID=D70876``

  * util-jvm: `JvmStats` has been moved here from TwitterServer allowing broader
    access to many metrics including GC, allocations, memory, and more.
    ``PHAB_ID=D80883``

  * util-stats: Introducing Verbosity Levels for StatsReceivers (see docs on `StatsReceiver`
    for more info). ``PHAB_ID=D70112``

  * util-tunable: `c.t.u.tunable.Tunable`, `c.t.u.tunable.TunableMap`,
    `c.t.u.tunable.JsonTunableMapper`, and `c.t.u.tunable.ServiceLoadedTunableMap` are now public.
    This allows users to create and use Tunables, a mechanism for accessing dynamically